# restack-agents

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RESTACK_CONVENTIONS.md  dev_check.py  docs.restack.io_libraries_python_agents.2025-10-22T22_24_20.303Z.md  note.md  pyproject.toml  quickstart.ps1  quickstart.sh  specs.md
examples/: custom_task.py  run_workflows.py
src/: __init__.py  schedule.py  service.py  shutdown.py
src/agents/: __init__.py  basemodel_agent.py
src/functions/: __init__.py  memory_compactor.py  memory_io.py  token_count.py
src/functions/tools/: __init__.py  collect_results.py  compile_writeup.py  generate_ideas.py  refine_ideas.py  reviewer.py  run_experiment.py  search_papers.py
src/models/: __init__.py  config.py  events.py  plan.py
src/workflows/: __init__.py  doc_pipeline_workflow.py  research_workflow.py
tests/: __init__.py  test_models.py
